epoll/select server init

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,25 +14,47 @@ set(PERSIST_LOG
         SegmentLog.h
         SegmentLog.cpp)
 
-set(PROTOCAL_SERVER
-        ProtocalServerUDP.cpp
-        ProtocalServerUDP.h)
+set(PROTOCAL_SERVER_EPOLL
+        ProtocalServerEpoll.cpp
+        ProtocalServerEpoll.h)
 
-set(PROTOCAL_CLIENT
+set(PROTOCAL_SERVER_SELECT
+        ProtocalServerSelect.cpp
+        ProtocalServerSelect.h)
+
+set(PROTOCAL_CLIENT_TCP
+        ProtocalClientTCP.cpp
+        ProtocalClientTCP.h)
+
+set(PROTOCAL_CLIENT_UDP
         ProtocalClientUDP.cpp
         ProtocalClientUDP.h)
 
-set(RAFT_LOGIC
+set(APP_STARTER
         AppLoopStarter.h
-        AppLoopStarter.cpp
+        AppLoopStarter.cpp)
+
+set(RAFT_LOGIC
         ElectionLogic.h
         ElectionLogic.cpp
         AppendEntryLogic.h
         AppendEntryLogic.cpp)
 
+add_executable(starter AppLoopStarter.cpp
+        ${APP_STARTER}
+        ${PROTOCAL_SERVER_EPOLL}
+        ${PROTOCAL_SERVER_SELECT}
+        ${PROTOCAL_CLIENT_TCP}
+        ${PROTOCAL_CLIENT_UDP}
+        ${PROTOCAL_DATA}
+        ${PERSIST_LOG}
+        ${RAFT_LOGIC})
+
 add_executable(plib_server main.cpp
-        ${PROTOCAL_SERVER}
-        ${PROTOCAL_CLIENT}
+        ${PROTOCAL_SERVER_EPOLL}
+        ${PROTOCAL_SERVER_SELECT}
+        ${PROTOCAL_CLIENT_TCP}
+        ${PROTOCAL_CLIENT_UDP}
         ${PROTOCAL_DATA}
         ${PERSIST_LOG}
         ${RAFT_LOGIC})
