--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.12)
 project(plib)
 
+find_package(Threads REQUIRED)
+
 set(CMAKE_CXX_STANDARD 14)
 
 set(PROTOCAL_DATA
@@ -40,7 +42,14 @@ set(RAFT_LOGIC
         AppendEntryLogic.h
         AppendEntryLogic.cpp)
 
+set(CLUSTER_CONFIG_TEMP
+        ClusterConfigTemp.h)
+
+set(UTILS
+        FdUtils.h)
+
 add_executable(starter AppLoopStarter.cpp
+        ${CLUSTER_CONFIG_TEMP}
         ${APP_STARTER}
         ${PROTOCAL_SERVER_EPOLL}
         ${PROTOCAL_SERVER_SELECT}
@@ -48,13 +57,24 @@ add_executable(starter AppLoopStarter.cpp
         ${PROTOCAL_CLIENT_UDP}
         ${PROTOCAL_DATA}
         ${PERSIST_LOG}
-        ${RAFT_LOGIC})
+        ${RAFT_LOGIC}
+        ${UTILS})
 
 add_executable(plib_server main.cpp
+        ${CLUSTER_CONFIG_TEMP}
         ${PROTOCAL_SERVER_EPOLL}
         ${PROTOCAL_SERVER_SELECT}
         ${PROTOCAL_CLIENT_TCP}
         ${PROTOCAL_CLIENT_UDP}
         ${PROTOCAL_DATA}
         ${PERSIST_LOG}
-        ${RAFT_LOGIC})
+        ${RAFT_LOGIC}
+        ${UTILS})
+
+if (THREADS_HAVE_PTHREAD_ARG)
+    target_compile_options(starter PUBLIC "-pthread")
+endif ()
+if (CMAKE_THREAD_LIBS_INIT)
+    target_link_libraries(starter "${CMAKE_THREAD_LIBS_INIT}")
+endif ()
+
